--- a/static/style.css
+++ b/static/style.css
@@ -1,22 +1,16 @@
-@font-face { font-family: 'Cinzel Decorative'; font-style: normal; font-weight: 500; src: local('CinzelDecorative-Regular'), url(cinzel.woff) format('woff');}
-
-body { color: #515151; font: 80%/1.5 Verdana,sans-serif; min-width: 960px; margin: 0px auto; max-width: 1080px; text-shadow: 0px 1px 1px rgba(0,0,0,0.1); }
-header { font-family: 'Cinzel Decorative', 'Lucida Bright', Verdana, cursive; font-size: 36px; margin: 14px 0px 10px 0px; }
+body { color: #515151; font: 80%/1.5 Verdana,sans-serif; margin: 0px auto; text-shadow: 0px 1px 1px rgba(0,0,0,0.1); }
+header { font-family: Verdana, cursive; font-size: 16px; margin: 14px 0px 10px 10px; }
 nav { border: 1px solid #eee; height: 34px; border-top: 0px; }
-article, footer  { border: 1px solid #eee; padding: 10px; margin-botton: 10px; }
-nav ul { list-style-type: none; margin: 0px; padding: 0px; display: inline-block; float:left; }
-nav ul li { display: inline-block; margin-left: 0px; border-right: 1px solid #eee; margin-left: -4px;}
-
-nav ul li:first-child { margin-left: -1px; }
-nav a:link, nav a:visited, nav a:active { color: #515151; text-decoration: none; display: inline-block; padding: 8px 12px;  }
-nav a:hover { background: #1abc9c; color: #fff;  }
-
-.rnav { float:right; }
-.rnav li:first-child { float:right; margin-right: -1px; border-right: 0px;}
-rect {clear: both;}
+footer  { border-top: 1px solid #eee; padding: 10px; margin-botton: 10px; text-align:right; }
 
 
-a:link, a:visited, a:active { color: #515151; text-decoration: none; }
-a:hover { color: #1abc9c; text-decoration: underline; }
+a:link, a:visited, a:active{ color: #d63597; padding: 1px; text-decoration: none;}
+a:hover{ color: #fff; background-color:#d63597; border-bottom: 1px dashed #fff;}
 
-img { width: 220px; height: 220px; padding: 0px; border: 1px solid #eee; margin: 20px; }
+
+img { width: 220px; height: 220px; padding: 0px; border: 1px solid #eee; margin: 20px; display: block; margin: 20px auto;}
+
+#wrapper { text-align: center; margin:10px auto; }
+#log { margin:10px auto; height: 320px; max-height:360px; text-align:left; background-color: rgba(52, 73, 94,1.0); color: #fff; padding:10px; overflow:auto; }
+#rs { margin:10px auto; height: 100px; max-height:120px; text-align:left; background-color:#d63597; color: #fff; padding:10px;}
+#step {margin:10px auto; text-align:left; padding:10px;}
