--- a/templates/main.html
+++ b/templates/main.html
@@ -6,22 +6,19 @@
     <meta http-equiv='X-UA-Compatible' content='IE=10' />
     <meta name='author' content='Belem'>
     <meta content='width=device-width, initial-scale=1.0, minimum-scale=0.2, maximum-scale=3.0, user-scalable=yes' name='viewport' />
-    <!-- <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'> -->
     <link rel='stylesheet' href='{{ static_url('style.css') }}' />
-    <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
   </head>
   <body>
+    <header>{% block header %}{{ title }}{% end %}</header>
     <div id='wrapper'>
-        <header>{% block header %}{{ title }}{% end %}</header>
-        <nav>
-            <ul>
-                <li><a href='/' id='lkhome'>隐私条款</a></li>
-            </ul>
-        </nav>
-        {% block body %} body {% end %}
-        <footer>
-            {% block footer %}2016 Belem{% end %}
-        </footer>
+    {% block body %} body {% end %}
+
+    <div>本服务谢绝收集您的隐私信息, 没空,正观看《乡村爱情故事8》中.</div>
+    <div>本服务关键代码 fork 自: <a href="https://github.com/0x5e/wechat-deleted-friends">0x5e/wechat-deleted-friends</a></div>
     </div>
+    <footer>
+        {% block footer %}&copy;2016 Belem{% end %}
+    </footer>
+
   </body>
 </html>
