--- a/templates/friend.html
+++ b/templates/friend.html
@@ -6,10 +6,18 @@
        <div>{{r}}</div>
    {% end %}
   </div>
-  您的如下好友已将您从微信好友中删除：
+  如下好友已将您从微信好友中删除：
   <div id='rs'>
    {% for l in result %}
        <div>{{l}}</div>
     {% end %}
+  </div>
+  <div id='note'>
+    <ul>
+      <li>您的微信中将出现一条群聊记录,请删除.</li>
+      <li>您的微信中将显示’网页微信已登录‘.请尽快退出.</li>
+      <li>本站再次保证不收集您的隐私信息, 站长正在看《乡村爱情故事8》.</li>
+      <li>有人删你莫失落, LLAP.</li>
+    </ul>
   </div>
 {% end %}
