--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
     <div id='wrapper'>
     {% block body %} body {% end %}
 
-    <div>本服务谢绝收集您的隐私信息, 没空,正观看《乡村爱情故事8》中.</div>
+    <div>本服务谢绝收集您的隐私信息, 没空.</div>
     <div>本服务关键代码 fork 自: <a href="https://github.com/0x5e/wechat-deleted-friends">0x5e/wechat-deleted-friends</a></div>
     </div>
     <footer>
