--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@ a:hover{ color: #fff; background-color:#d63597; border-bottom: 1px dashed #fff;}
 img { width: 220px; height: 220px; padding: 0px; border: 1px solid #eee; margin: 20px; display: block; margin: 20px auto;}
 
 #wrapper { text-align: center; margin:10px auto; }
-#log { margin:10px auto; height: 320px; max-height:360px; text-align:left; background-color: rgba(52, 73, 94,1.0); color: #fff; padding:10px; overflow:auto; }
+#log { margin:10px auto; height: 320px; max-height:360px; text-align:left; padding:10px; overflow:auto; }
 #rs { margin:10px auto; height: 100px; max-height:120px; text-align:left; background-color:#d63597; color: #fff; padding:10px;}
 #step {margin:10px auto; text-align:left; padding:10px;}
+#note {margin:10px auto; text-align:left; padding:10px;}
+
+#step form { margin: 0px auto; text-align: center; }
+#se { margin:0px auto; background-color:#d63597; color:#fff; padding: 8px 12px; border:1px solid #d63597; box-shadow: 1px 1px 2px rgba(0,0,0,0.5);  cursor:pointer; }
