--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
       <li>请耐心等待页面结果返回</li>
     </ol>
 
-    <form method='post' action='/search' id='search'>
+    <form method='post' action='/s' id='search'>
       <input name='se' id='se' type='submit' value='我已成功登录微信'>
     </form>
 
