--- a/templates/friend.html
+++ b/templates/friend.html
@@ -6,18 +6,16 @@
        <div>{{r}}</div>
    {% end %}
   </div>
-  如下好友已将您从微信好友中删除：
   <div id='rs'>
-   {% for l in result %}
-       <div>{{l}}</div>
-    {% end %}
+    <div id='lf'>这些人已将您从微信中删除</div>
+    <div id='rt'>{% for l in result %}{{l}}{% end %} </div>
   </div>
   <div id='note'>
     <ul>
-      <li>您的微信中将出现一条群聊记录,请删除.</li>
-      <li>您的微信中将显示’网页微信已登录‘.请尽快退出.</li>
-      <li>本站再次保证不收集您的隐私信息, 站长正在看《乡村爱情故事8》.</li>
-      <li>有人删你莫失落, LLAP.</li>
+      <li>微信将出现一条群聊记录, 请删除.</li>
+      <li>微信若显示"网页微信已登录", 请登出.</li>
+      <li>只能检测删除你的人, 拉黑你的人无法检测.</li>
+      <li>人生艰难, LLAP.</li>
     </ul>
   </div>
 {% end %}
